--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -4,9 +4,11 @@
   line-height: 1.5;
   font-weight: 400;
 
+  height: 80vh;
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+  min-height: 80vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,10 +19,10 @@
 * {
   font-family: 'Roboto Slab', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0 auto;
+  font-weight: bold;
 }
 
 a {
-  font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
@@ -30,10 +32,22 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+main {
+  display: flex;
+  place-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  vertical-align: middle;
+  height: 100%;
+}
+
+header {
+  display: block;
 }
 
 h1 {
@@ -46,7 +60,6 @@ button {
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
-  font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
