--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -63,7 +63,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 1.3em;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
@@ -83,6 +83,31 @@ button:focus-visible {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.questionTime {
+  display: flex;
+  justify-content: space-between;
+}
+
+.preguntas span {
+  font-size: 1.4em;
+  font-family: 'Roboto slab';
+}
+
+.preguntas h4 {
+  font-family: 'Roboto slab';
+}
+
+.preguntas p {
+  font-family: 'Roboto slab';
+  margin: 1em;
+}
+
+.nav button,
+.nav a,
+.menu p {
+  font-family: 'Roboto slab';
 }
 
 @media (prefers-color-scheme: light) {
