--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -110,6 +110,12 @@ button:focus-visible {
   font-family: 'Roboto slab';
 }
 
+.isNotSelected {
+  color: #555 !important;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
