--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -22,8 +22,8 @@
 }
 
 * {
-  font-family: 'Roboto Slab', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  margin: 0 auto;
+  font-family: 'Roboto Slab', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
+  margin: 0;
   font-weight: bold;
 }
 
@@ -48,6 +48,14 @@ main {
   align-items: center;
   vertical-align: middle;
   height: 100%;
+  
+}
+
+.panelLoginRegister h1,
+.panelLoginRegister h2,
+.panelLoginRegister h3
+.panelLoginRegister button {
+  font-family: 'Roboto Slab', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif !important;
 }
 
 header {
@@ -76,6 +84,18 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+.buttonLoginRegister {
+  display: block !important;
+  margin: 0 auto !important;
+  background-color: #8f95fd !important;
+  font-weight: bold !important;
+  margin: 20px auto 20px auto !important;
+}
+
+.buttonLoginRegister:hover {
+  background-color: #6367b3 !important;
 }
 
 #start {
@@ -170,7 +190,7 @@ button:focus-visible {
 }
 
 .selectedImg {
-  border: 4px solid #FFF !important;
+  border: 5px solid #8f95fd !important;
 }
 
 @media (prefers-color-scheme: light) {
