--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -51,6 +51,14 @@ main {
   
 }
 
+.divPreguntas {
+  max-width: 80%;
+}
+
+.botoneraPreguntas {
+  display: flex;
+}
+
 .panelLoginRegister h1,
 .panelLoginRegister h2,
 .panelLoginRegister h3
@@ -69,11 +77,12 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  border: 4px solid transparent;
+  padding: 0.4em 1em;
   font-size: 1.3em;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #FFF;
+  color: #242424;
   cursor: pointer;
   transition: border-color 0.25s;
   vertical-align: bottom;
