--- a/webapp/src/css/index.css
+++ b/webapp/src/css/index.css
@@ -41,6 +41,11 @@ body {
   min-height: 100vh;
 }
 
+.icono {
+  width: 2.5em;
+  margin-right: 20px;
+}
+
 main {
   display: flex;
   flex-direction: column;
@@ -202,8 +207,26 @@ button:focus-visible {
   border: 5px solid #8f95fd !important;
 }
 
-.disappear {
-  display: none !important;
+.questionCategory {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2em;
+}
+
+.questionCategory button {
+  margin: 5px;
+  padding: 1px 3px;
+  font-size: 1em;
+}
+
+.questionCategory button:hover {
+  color: #FFF;
+  background-color: #646cff;
+}
+
+.questionCategoryMarked {
+  color: #FFF;
+  background-color: #646cff;
 }
 
 @media (prefers-color-scheme: light) {
