--- a/webapp/src/css/User.css
+++ b/webapp/src/css/User.css
@@ -1,45 +1,41 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.titleLoginRegister {
+  color: #8f95fd;
+  font-size: 3em;
+  font-weight: bold;
+  font-family: Helvetica;
+  text-shadow: 
+  0 1px 0 #6d73d3,
+    0 2px 0 #4e53b8,
+    0 3px 0 #3c3fa5,
+    0 4px 0 #2e308f,
+    0 5px 0 #1f207a,
+    0 6px 1px rgba(0,0,0,.1), 
+    0 0 5px rgba(0,0,0,.1), 
+    0 1px 3px rgba(0,0,0,.3), 
+    0 3px 5px rgba(0,0,0,.2), 
+    0 5px 10px rgba(0,0,0,.25), 
+    0 10px 10px rgba(0,0,0,.2), 
+    0 20px 20px rgba(0,0,0,.15),
+    0 30px 30px rgba(0,0,0,.1);
+}
+
+.titleLoginRegister {
   text-align: center;
 }
-  
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+
+.btn span {
+  font-size: 1.3em;
 }
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.area button {
+  padding: 12px 60px;
+  margin: 0 auto !important;
+  margin-top: 1em !important;
 }
 
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-  
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (max-width: 425px) {
+
+  .titleLoginRegister {
+    font-size: 2em;
   }
 }
-  
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-  
-.card {
-  padding: 2em;
-}
-  
-.read-the-docs {
-  color: #888;
-}
-  
