--- a/webapp/src/css/layout.css
+++ b/webapp/src/css/layout.css
@@ -5,20 +5,14 @@
   font-weight: 400;
   display: flex;
   flex-direction: column;
-  height: 80vh; 
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-  height: 80vh;
 }
 
 * {
@@ -28,15 +22,14 @@
 }
 
 a {
-  color: #7c82fb;
+  color: #8f95fd;
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
 }
 
 body {
-  margin: 0;
+  display: flex;
+  margin: 0 auto;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -48,7 +41,7 @@ main {
   align-items: center;
   vertical-align: middle;
   height: 100%;
-  
+  min-width: 60%;
 }
 
 header {
@@ -58,23 +51,6 @@ header {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 4px solid transparent;
-  padding: 0.4em 1em;
-  font-size: 1.3em;
-  font-family: inherit;
-  background-color: #FFF;
-  color: #242424;
-  cursor: pointer;
-  transition: border-color 0.25s;
-  vertical-align: bottom;
-}
-
-button:hover {
-  border-color: #7c82fb;
 }
 
 button:focus,
@@ -93,4 +69,55 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.button_container button {
+  width: 100%;
+}
+
+.button_container button:after {
+  transform: translateX(-76%) translateY(-25%) rotate(70deg);
+}
+
+.btn {
+  border-radius: 8px;
+  border: 4px solid transparent;
+  border: none;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  color: #000000;
+  font-weight: 700;
+  font-size: 15px;
+  background-color: #FFF;
+  padding: 17px 60px;
+  margin: 0 !important;
+}
+
+.btn span {
+  position: relative; 
+  z-index: 1;
+}
+
+.btn:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 490%;
+  width: 140%;
+  background: #8f95fd;
+  -webkit-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+  -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
+  transform: translateX(-98%) translateY(-25%) rotate(45deg);
+}
+
+.btn:hover:after {
+  -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+  transform: translateX(-5%) translateY(-25%) rotate(45deg);
 }
