--- a/webapp/src/css/nav.css
+++ b/webapp/src/css/nav.css
@@ -1,5 +1,10 @@
+.nav {
+  position: fixed !important;
+  left: 0;
+}
+
 .icono {
-    width: 2.5em;
+  width: 2.5em;
 }
 
 .nav button,
@@ -10,4 +15,36 @@
 
 .navButton:hover {
   color: #747bff;
+}
+
+.optionsNav {
+  cursor: pointer;
+  margin-left: 0.4em !important;
+}
+
+.optionsNav,
+.tituloNav {
+  position: relative;
+  display: block;
+  padding: 5px;
+}
+
+.optionsNav::before,
+.tituloNav::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: #747bff;
+  z-index: 1;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.3s ease-in-out;
+}
+
+.optionsNav:hover::before,
+.tituloNav:hover::before {
+  transform: scaleX(1);
 }
