--- a/webapp/src/css/question.css
+++ b/webapp/src/css/question.css
@@ -11,6 +11,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 0.5em;
 }
 
 .audioQuestion {
@@ -40,4 +41,24 @@
 
 .botoneraPreguntas {
     display: flex;
+}
+
+.titleQuestion {
+    text-align: center;
+}
+
+@media screen and (max-width: 630px) {
+
+    .titleQuestion {
+        font-size: 1.4em !important;
+        padding: 0 0 16px 0 !important;
+    }
+
+    .preguntas span {
+        font-size: 1.2em !important;
+    }
+
+    .questionTime p {
+        font-size: 0.8em;
+    }
 }
