--- a/webapp/src/css/addUser.css
+++ b/webapp/src/css/addUser.css
@@ -18,7 +18,6 @@
 
 #fotosPerfil {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
     padding: 20px 0;
@@ -43,4 +42,27 @@
 
 .selectedImg {
     border: 5px solid #8f95fd !important;
+}
+
+.inputsRegister div {
+    margin-top: 0;
+}
+
+.inputsRegister h2 {
+    margin-bottom: 1em;
+}
+
+h3 {
+    text-align: center;
+}
+
+@media screen and (max-width: 630px) {
+    #fotosPerfil {
+        flex-wrap: wrap;
+    }
+
+    .sing {
+        margin-top: 0.6em !important;
+        padding: 8px 60px;
+    }
 }
