--- a/webapp/src/css/game.css
+++ b/webapp/src/css/game.css
@@ -35,8 +35,8 @@
 }
   
 .questionCategoryMarked {
-    color: #FFF;
-    background-color: #8f95fd;
+    color: #FFF !important;
+    background-color: #8f95fd !important;
 }
 
 .customOptions {
@@ -68,4 +68,19 @@
 
 .formCategory {
     margin: 0 !important;
+}
+
+.categoryBtn {
+  border-radius: 8px;
+  border: 4px solid transparent;
+  border: none;
+  text-align: center;
+  cursor: pointer;
+  outline: none;
+  overflow: hidden;
+  color: #000000;
+  font-weight: 700;
+  background-color: #FFF;
+  padding: 8px 10px !important;
+  margin: 0.1em 0.2em !important;
 }
