--- a/webapp/src/css/layout.css
+++ b/webapp/src/css/layout.css
@@ -121,3 +121,64 @@ button:focus-visible {
   -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
   transform: translateX(-5%) translateY(-25%) rotate(45deg);
 }
+
+.appearEffectFast {
+  opacity: 0;
+  animation: appear 0.5s ease-out forwards;
+}
+
+.appearEffect {
+  opacity: 0;
+  animation: appear 1s ease-out forwards;
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.upEffect {
+  opacity: 0;
+  animation: fadeIn 0.4s ease-out forwards;
+  position: relative;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    top: 100px;
+  }
+  100% {
+    opacity: 1;
+    top: 0;
+  }
+}
+.upEffect:nth-child(1) {
+  animation-delay: 0.1s;
+}
+.upEffect:nth-child(2) {
+  animation-delay: 0.2s;
+}
+.upEffect:nth-child(3) {
+  animation-delay: 0.3s;
+}
+.upEffect:nth-child(4) {
+  animation-delay: 0.4s;
+}
+.upEffect:nth-child(5) {
+  animation-delay: 0.5s;
+}
+.upEffect:nth-child(6) {
+  animation-delay: 0.6s;
+}
+.upEffect:nth-child(7) {
+  animation-delay: 0.7s;
+}
+.upEffect:nth-child(8) {
+  animation-delay: 0.8s;
+}
+.upEffect:nth-child(9) {
+  animation-delay: 0.9s;
+}
