--- a/webapp/src/css/users.css
+++ b/webapp/src/css/users.css
@@ -12,6 +12,7 @@ h2 {
   font-size: 3em;
   font-weight: bold;
   font-family: Helvetica;
+  margin-bottom: 0.7em;
   text-shadow: 
   0 1px 0 #6d73d3,
     0 2px 0 #4e53b8,
@@ -53,6 +54,10 @@ h2 {
 
 input {
   background-color: #080808 !important;
+}
+
+.titleLoginRegister {
+  opacity: 0;
 }
 
 @media screen and (max-width: 425px) {
