--- a/webapp/src/css/friends.css
+++ b/webapp/src/css/friends.css
@@ -17,16 +17,15 @@
 
 }
 
-.tableFriends th,
+.tableFriends th{
+    padding: 8px;
+    text-align: left;
+}
 .tableFriends td {
     padding: 8px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-}
 
+}
 .tableFriends th {
     background-color: #8f95fd;
     color: black;
@@ -47,10 +46,12 @@
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
+    gap:0.5rem;
 }
 .searchForm input{
     color: white;
     font-size: 1.5em;
+    border-radius: 10px;
 }
 .actions_container{
     display: flex;
