--- a/webapp/src/css/participation.css
+++ b/webapp/src/css/participation.css
@@ -1,27 +1,11 @@
-.Participation-container {
-    margin-top: 50px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .Participation-title {
-    color: #8f95fd;
-    padding: 0 1em;
-    text-align: center;
-    font-size: 1.4em;
-  }
-  
-  .Participation-text {
-    font-size: 1.4em;
-    text-align: center;
-    line-height: 1;
-  }
-@media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
   .tablePost {
     font-size: 0.8rem;
   }
   .Participation-text{
     width: 100vmin;
   }  
+  #participationTitle{
+    padding-top: 60px;
+  }
 }
